Fix: horizontal scroll on large screens

--- a/src/AppBundle/Resources/public/style/wizaplace/demo.scss
+++ b/src/AppBundle/Resources/public/style/wizaplace/demo.scss
@@ -139,3 +139,8 @@ footer {
         display: block;
     }
 }
+
+// misc
+.slick-next {
+    right: 0 !important;
+}
